# Atlas

./: .editorconfig  .env.release.example  .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  run_pytest.py
.github/workflows/: ci.yml
backend/: README.md  requirements-dev.txt  requirements.txt
backend/adapters/: README.md  __init__.py
backend/api/: README.md  __init__.py  dependencies.py
backend/application/: README.md
backend/atlas_backend/: __init__.py  __main__.py  app.py
backend/domain/: README.md
backend/infrastructure/: README.md  sentry_dsn.py
design/: atlas-design-system.html
docs/: BUILDING.md  atlas-brief.md  prd.md  roadmap.md
docs/api/: automation.md  backup.md  config.md  git.md  incident.md  monitoring.md  overview.md  plugin.md  project.md  resources.md  setup.md  telemetry.md
docs/architecture/: automation-engine.md  backend.md  data-flow.md  frontend.md  incident-intelligence.md  module-boundaries.md  overview.md  plugin-system.md  telemetry-and-privacy.md
docs/database/: audit-shared.md  automation.md  backup.md  config.md  git.md  incident.md  monitoring.md  overview.md  project.md  resources.md  setup.md  telemetry.md
frontend/: README.md  package-lock.json  package.json
plugin-sdk/: README.md
scripts/: atlas-backend.spec  build_backend_sidecar.py  ci_sidecar_health_check.py  generate_tauri_icons.py
src-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/capabilities/: README.md  default.json
src-tauri/src/: README.md  backend_lifecycle.rs  main.rs
tests/: conftest.py
(+510 files in other folders)
