[package]
name = "atlas"
version = "0.0.0"
description = "Atlas desktop shell"
authors = ["Atlas contributors"]
edition = "2021"

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
